assets/css/style.css
/* ... */
.nav-outter-box {
    height: 100px;
    width: 19%;
    display: inline-block;
    margin: auto;
    text-align: center;
    position: relative;
    float: right;
}

.nav-outter-box > a {
    text-decoration: none;
    color: whitesmoke;
    display: inline;
}
#contact-us-stamp {
    height: 20px;
    width: 100%;
    background-color: magenta;
    margin: auto;
    margin-bottom: 30px;
    display: relative;
}

#gallery-stamp {
    height: 20px;
    width: 100%;
    background-color: green;
    margin: auto;
    margin-bottom: 30px;
    display: relative;
}

#getting-around-stamp {
    height: 20px;
    width: 100%;
    background-color: yellow;
    margin: auto;
    margin-bottom: 30px;
    display: relative;
}

#things-to-do-stamp {
    height: 20px;
    width: 100%;
    background-color: blue;
    margin: auto;
    margin-bottom: 30px;
    display: relative;
}

#home-stamp {
    height: 20px;
    width: 100%;
    background-color: red;
    margin: auto;
    margin-bottom: 30px;
    display: relative;
}

#contact-us-stamp-select {
    height: 40px;
    width: 100%;
    background-color: magenta;
    margin: auto;
    margin-bottom: 10px;
    display: relative;
}

#gallery-stamp-select {
    height: 40px;
    width: 100%;
    background-color: green;
    margin: auto;
    margin-bottom: 10px;
    display: relative;
}

#getting-around-stamp-select {
    height: 40px;
    width: 100%;
    background-color: yellow;
    margin: auto;
    margin-bottom: 10px;
    display: relative;
}

#things-to-do-stamp-select {
    height: 40px;
    width: 100%;
    background-color: blue;
    margin: auto;
    margin-bottom: 10px;
    display: relative;
}

#home-stamp-select {
    height: 40px;
    width: 100%;
    background-color: red;
    margin: auto;
    margin-bottom: 10px;
    display: relative;
}




/* ----- Footer Styles ----- */





footer {
    margin-top: auto;
    height: 70px;
    width: 100%;
    background-color: black;
    position: fixed;
    bottom: 0;
}

#social-media-link-container {
    margin: auto;
    margin-left: 10%;
}

#social-media-link-container > h2 {
    float: left;
    padding-right: 2%;
    margin-top: 17.5px;
}

#social-media-link {
    width: 40px;
    padding-right: 2%;
    display: inline-block;
    float: left;
    margin-top: 15px;
}




/* ----- Home Page Styles ----- */





#welcome-image-container {
    width: 100%;
    height: 100%;
    overflow: auto;
    position: fixed;
    margin: auto;
    margin-bottom: 5%;
}

#welcome {
    width: 80%;
    background-color: rgba(0, 0, 0, 0.7);
    position: absolute;
    margin-left: 10%;
    margin-top: 5%;
    margin-bottom: 5%;
    border: 2px solid darkgray;
}

#welcome-content {
    color: whitesmoke;
    text-align: center;
    position: relative;
    padding: 7%;
}

#index-body-image {
    width: 100%;
    height: 100%;
    background: url(../images/wellington-city-from-mt-vic-2.jpg) no-repeat center center;
    background-size: cover;
    position: fixed;
}


/* ----- Things To Do Styles ----- */





#things-to-do-body-image {
    width: 100%;
    height: 100%;
    background: url(../images/wellington-city-from-mt-vic-3.jpg) no-repeat center center;
    background-size: cover;
    position: fixed;
}

.things-to-do-text {
    text-align: justify;
    width: 75%;
    float: right;
}

#things-to-do-te-papa-text {
    display: inline-block; 
    width: 100%;
}

#things-to-do-welly-trails-text {
    display: inline-block; 
    width: 100%;
}

#things-to-do-zealandia-text {
    display: inline-block; 
    width: 100%;
}

#things-to-do-bot-gardens-text {
    display: inline-block; 
    width: 100%;
}

#things-to-do-weta-workshop-text {
    display: inline-block; 
    width: 100%;
}

#te-papa-section {
    width: 60%;
    background-color: rgba(0, 0, 0, 0.7);
    margin-right: 10%;
    padding: 20px;
    border-radius: 10px;
    border: 2px solid darkgray;
    float: right;
}

#te-papa-thumb {
    height: 200px;
    width: 200px;
    background-image: url(../images/te-papa-thumb.jpg);
    background-size: cover;
    border-radius: 50%;
    border: 5px solid darkgray;
    float: left;
    padding: 20px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
}

#bot-gardens-section {
    width: 60%;
    background-color: rgba(0, 0, 0, 0.7);
    position: relative;
    margin-left: 10%;
    margin-top: 5%;
    padding: 20px;
    border-radius: 10px;
    border: 2px solid darkgray;
    float: left;
}

#bot-gardens-thumb {
    height: 200px;
    width: 200px;
    background-image: url(../images/bot-gardens-thumb.jpg);
    background-size: cover;
    border-radius: 50%;
    border: 5px solid darkgray;
    float: left;
    padding: 20px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
}

#welly-trails-section {
    width: 60%;
    background-color: rgba(0, 0, 0, 0.7);
    position: relative;
    margin-right: 10%;
    margin-top: 5%;
    padding: 20px;
    border-radius: 10px;
    border: 2px solid darkgray;
    float: right;
}

#welly-trails-thumb {
    height: 200px;
    width: 200px;
    background-image: url(../images/wellington-trails-thumb.jpg);
    background-size: cover;
    border-radius: 50%;
    border: 5px solid darkgray;
    float: left;
    padding: 20px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
}

#weta-workshop-section {
    width: 60%;
    background-color: rgba(0, 0, 0, 0.7);
    position: relative;
    margin-left: 10%;
    margin-top: 5%;
    padding: 20px;
    border-radius: 10px;
    border: 2px solid darkgray;
    float: left;
}

#weta-workshop-thumb {
    height: 200px;
    width: 200px;
    background-image: url(../images/weta-workshop-thumb.jpg);
    background-size: cover;
    border-radius: 50%;
    border: 5px solid darkgray;
    float: left;
    padding: 20px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
}
/* ... */

